--- a/django/blog/templates/base.html
+++ b/django/blog/templates/base.html
@@ -16,6 +16,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css"/>
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href={% static "css/styles.css" %} rel="stylesheet"/>
+    {% block css %}{% endblock css %}
   </head>
 
   <body>
@@ -79,6 +80,7 @@
     <!-- Core theme JS-->
     <script src={% static "js/scripts.js" %}></script>
     <script src={% static "js/base.js" %}></script>
+    {% block script %}{% endblock script %}
   </body>
 
 </html>
