--- a/django/blog/templates/blog/create.html
+++ b/django/blog/templates/blog/create.html
@@ -9,7 +9,7 @@
           {% csrf_token %}
           <div class="form-group mb-3">
             <label for="title">제목</label>
-            <input type="text" name="title" id="title" class="form-control" value=""></input>
+            <input type="text" name="title" id="title" class="form-control" value="{{form.title.value|default_if_none:''}}"></input>
           </div>
           <div class="form-group mb-3">
             <label for="content">내용</label>
@@ -18,6 +18,13 @@
           <div class="form-group mb-3">
             <label for="image">이미지</label>
             <input type="file" name="image" id="image" class="form-control" value=""></input>
+          </div>
+          <div class="form-group mb-3">
+            <label for="tags">태그</label>
+            <input type="text" name="tags" id="tags" class="form-control" value="{{form.tags.value|default_if_none:''}}"></input>
+            <small>
+              태그는 콤마로 구분해서 입력하세요
+            </small>
           </div>
           <input type="submit" value="새글 작성" class="btn btn-primary"/>
         </form>
