--- a/django/blog/templates/blog/post.html
+++ b/django/blog/templates/blog/post.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
 {% load static %}
+{% block css %}
+<link rel="stylesheet" href="{% static "css/post.css" %}">
+{% endblock css %}
 {% block content %}
   <!-- Post Content-->
   <article class="mb-4">
@@ -37,9 +40,63 @@
             <a href="{% url "blog:list" %}" class="btn btn-success">목록</a>
           </div>
         </div>
-
+        {% include "like.html" %}
+        {% comment %} taggit {% endcomment %}
+        <div class="row mt-3">
+          <div class="col-md-10">
+            {% for tag in post.tags.all %}
+            <span class="badge rounded-pill text-bg-dark">#{{tag.name}}</span>
+            {% endfor %}
+          </div>
+        </div>
+        {% comment %} 댓글 목록 처리 {% endcomment %}
+        {% if post.comment_set.count > 0 %}
+        <div class="row mt-5">
+          <div class="col-md-10">
+            <div class="card mb-5">
+            <div class="card-header">
+              <i class="fa-regular fa-comments"></i>
+              Comments
+            </div>            
+            {% comment %} 댓글 반복 {% endcomment %}            
+            <div class="card-body">
+              {% for comment in post.comment_set.all %}
+              <h5 class="card-title">
+                {% comment %} 댓글 내용 {% endcomment %}
+                {{comment.content}}
+              </h5>
+              <div class="card-text text-end fa-5 bg-light">
+                {% comment %} 댓글 작성자(댓글 작성 일자) {% endcomment %}
+                {{comment.user}} {{comment.created_at}}
+              </div>
+              {% endfor %}
+             </div>              
+             
+          </div>
+        </div>
+      </div> 
+      {% endif %}
+        {% comment %} 댓글 등록 {% endcomment %}
+        {% if user.is_authenticated %}
+        <div class="row mt-5">
+          <div class="col-md-10">
+            <form action="{% url "blog:comment_create" post.id %}" method="post">
+              {% csrf_token %}
+              <div class="form-group">
+                <textarea name="content" id="content" class="form-control" rows="7"></textarea>
+              </div>
+              <div class="form-group d-grid">
+                <button class="btn btn-secondary" type="submit">댓글등록</button>
+              </div>
+            </form>
+          </div>
+        </div>
+        {% endif %}
       </div>      
       </div>
     </div>
   </article>
 {% endblock content %}
+{% block script %}
+<script src="{% static "js/post.js" %}"></script>
+{% endblock script %}
