--- a/django/blog/templates/footer.html
+++ b/django/blog/templates/footer.html
@@ -1,31 +1,26 @@
+{% load social_share %}
 <footer class="border-top">
   <div class="container px-4 px-lg-5">
     <div class="row gx-4 gx-lg-5 justify-content-center">
       <div class="col-md-10 col-lg-8 col-xl-7">
         <ul class="list-inline text-center">
           <li class="list-inline-item">
-            <a href="#!">
-              <span class="fa-stack fa-lg">
-                <i class="fas fa-circle fa-stack-2x"></i>
-                <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
-              </span>
-            </a>
+            {%post_to_twitter "[New Post] {{post.title}}" object_or_url '<span class="fa-stack fa-lg">
+            <i class="fas fa-circle fa-stack-2x"></i>
+            <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
+            </span>'%}
           </li>
           <li class="list-inline-item">
-            <a href="#!">
-              <span class="fa-stack fa-lg">
-                <i class="fas fa-circle fa-stack-2x"></i>
-                <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
-              </span>
-            </a>
+            {%post_to_facebook object_or_url '<span class="fa-stack fa-lg">
+            <i class="fas fa-circle fa-stack-2x"></i>
+            <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
+            </span>'%}
           </li>
           <li class="list-inline-item">
-            <a href="#!">
-              <span class="fa-stack fa-lg">
+            {%post_to_telegram "[New Post] {{post.title}}" object_or_url '<span class="fa-stack fa-lg">
                 <i class="fas fa-circle fa-stack-2x"></i>
-                <i class="fab fa-github fa-stack-1x fa-inverse"></i>
-              </span>
-            </a>
+                <i class="fab fa-telegram fa-stack-1x fa-inverse"></i>
+              </span>'%}
           </li>
         </ul>
         <div class="small text-center text-muted fst-italic">Copyright &copy; Your Website 2023</div>
